--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
     <string name="app_name">NewsApp</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="blank_news_detail">blank news detail</string>
+    <string name="searchHint">Type key words you want to query</string>
+    <string name="imageview_placeholder">ImageView placeholder</string>
 </resources>
