--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,6 @@
     <string name="app_name">NewsApp</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="blank_news_detail">blank news detail</string>
-    <string name="searchHint">Type key words you want to query</string>
+    <string name="searchHint">Type and enjoy searching</string>
     <string name="imageview_placeholder">ImageView placeholder</string>
 </resources>
